--- a/mckee-cole-a2-project-1/mckee-cole-a2-project-1.csproj
+++ b/mckee-cole-a2-project-1/mckee-cole-a2-project-1.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>.net10.0</TargetFramework>
-    <RootNamespace>_2D_Interactive_Drawing_CM</RootNamespace>
+    <RootNamespace>mckee_cole_a2_project_1</RootNamespace>
     <ImplicitUsings>disable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>False</GenerateDocumentationFile>
